name:                gallery
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/pweids/gallery#readme
license:             BSD3
license-file:        LICENSE
author:              Paul Weidinger
maintainer:          paul.weidinger@gmail.com
copyright:           Paul Weidinger
category:            Web
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

executable gallery
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                     , text
                     , containers
                     , raw-strings-qq
                     , reddit
                     , scotty
